--- a/app/pages/index.css
+++ b/app/pages/index.css
@@ -11,7 +11,7 @@
 }
 
 :root {
-  --global-scale: 0.75;
+  --global-scale: 0.75 !important;
 }
 
 .skeleton-box {
